Fix jittery elastic scroll on iOS touch.

--- a/backend/app/assets/stylesheets/spree/backend/plugins/overscroll_indicator.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/overscroll_indicator.scss
@@ -24,7 +24,16 @@
   & > * {
     z-index: 200;
   }
+
+  // Bug fix for iOS jittery elastic scroll from Bootstrap 4 transaition on pills and buttons.
+  // Kill transitions on items within [data-overscroll-content]
+  & > li > a {
+    transition: none !important;
+  }
 }
+
+
+
 
 .pn-ProductNav_Contents-no-transition {
   transition: none;
